--- a/Project.toml
+++ b/Project.toml
@@ -1,4 +1,4 @@
-name = "GenDav"
+name = "Davidson"
 uuid = "0c603acf-41d5-40bf-a378-7dbbea0dae82"
 authors = ["Simon Neville"]
 version = "1.0.0-DEV"
