--- a/Project.toml
+++ b/Project.toml
@@ -3,7 +3,17 @@ uuid = "0c603acf-41d5-40bf-a378-7dbbea0dae82"
 authors = ["Simon Neville"]
 version = "1.0.0-DEV"
 
+[deps]
+InteractiveUtils = "b77e0a4c-d291-57a0-90e8-8db25a27a240"
+LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
+Printf = "de0858da-6303-5e67-8744-51eddeeeb8d7"
+UnPack = "3a884ed6-31ef-47d7-9d2a-63182c4928ed"
+
 [compat]
+InteractiveUtils = "1.11.0"
+LinearAlgebra = "1.11.0"
+Printf = "1.11.0"
+UnPack = "1.0.2"
 julia = "1.11.5"
 
 [extras]
