--- a/Project.toml
+++ b/Project.toml
@@ -1,7 +1,7 @@
 name = "Davidson"
 uuid = "0c603acf-41d5-40bf-a378-7dbbea0dae82"
 authors = ["Simon Neville"]
-version = "1.0.0-DEV"
+version = "1.0.0"
 
 [deps]
 InteractiveUtils = "b77e0a4c-d291-57a0-90e8-8db25a27a240"
